--- a/pet-place/Reviews.storyboard
+++ b/pet-place/Reviews.storyboard
@@ -11,11 +11,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Montserrat-Regular.ttf">
-            <string>Montserrat-Regular</string>
-        </array>
         <array key="서울남산 장체L.otf">
             <string>SeN-CL</string>
+        </array>
+        <array key="서울남산 장체M.otf">
+            <string>SeN-CM</string>
         </array>
         <array key="이순신돋움체M.otf">
             <string>YiSunShinDotumM</string>
@@ -49,8 +49,8 @@
                                     <constraint firstAttribute="height" constant="50" id="0Tn-9O-YDe"/>
                                     <constraint firstAttribute="width" constant="200" id="vNc-1S-QFa"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                <state key="normal" title="Leave a review">
+                                <fontDescription key="fontDescription" name="YiSunShinDotumM" family="YiSunShin Dotum M" pointSize="16"/>
+                                <state key="normal" title="리뷰 글 쓰기">
                                     <color key="titleColor" red="0.92156862750000001" green="0.77647058820000003" blue="0.062745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <state key="highlighted">
@@ -125,14 +125,14 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="continuous" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="리뷰 입력해주세요(30자 이상)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfg-HS-GuF">
-                                <rect key="frame" x="98" y="85" width="180" height="18.5"/>
-                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="리뷰 입력해주세요(20자 이상)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfg-HS-GuF">
+                                <rect key="frame" x="101" y="85" width="175" height="15.5"/>
+                                <fontDescription key="fontDescription" name="YiSunShinDotumM" family="YiSunShin Dotum M" pointSize="15"/>
                                 <color key="textColor" red="0.078431372550000003" green="0.01176470588" blue="0.20000000000000001" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FxB-TB-ONj">
-                                <rect key="frame" x="87" y="351.5" width="200" height="50"/>
+                                <rect key="frame" x="87" y="348.5" width="200" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="4oc-YI-ygD"/>
                                     <constraint firstAttribute="width" constant="200" id="RFB-bg-HXq"/>
@@ -148,7 +148,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="상세한 리뷰는 다른 분께 큰 도움이 됩니다!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5Qd-AK-vE8">
-                                <rect key="frame" x="15" y="111.5" width="345" height="120"/>
+                                <rect key="frame" x="15" y="108.5" width="345" height="120"/>
                                 <color key="backgroundColor" red="0.98039215686274506" green="0.98431372549019602" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="PQ9-hz-DKx"/>
@@ -161,7 +161,7 @@
                                 </connections>
                             </textView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Q3G-cF-kbs">
-                                <rect key="frame" x="15" y="241.5" width="345" height="100"/>
+                                <rect key="frame" x="15" y="238.5" width="345" height="100"/>
                                 <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="0.37264554794520549" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="PDS-EO-Aw5"/>
@@ -199,7 +199,7 @@
                                 </connections>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="현재" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEs-xB-0eI">
-                                <rect key="frame" x="15" y="90" width="50" height="10"/>
+                                <rect key="frame" x="15" y="88.5" width="50" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="Tnk-zk-Ssn"/>
                                     <constraint firstAttribute="height" constant="10" id="USp-4y-ixE"/>
@@ -263,7 +263,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jtN-Re-Tnf">
-                                <rect key="frame" x="28" y="137" width="319" height="303.5"/>
+                                <rect key="frame" x="28" y="137.5" width="319" height="303.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="리뷰 내용" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABz-8L-10c">
                                         <rect key="frame" x="15" y="276" width="289" height="12.5"/>
@@ -388,7 +388,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="euF-A7-33O">
-                                <rect key="frame" x="88" y="460.5" width="200" height="50"/>
+                                <rect key="frame" x="88" y="461" width="200" height="50"/>
                                 <color key="backgroundColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="9ry-YU-XXR"/>
@@ -474,17 +474,17 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="270" height="73"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="fo2-ES-fjc">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="270" height="18"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="270" height="14"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="dpd-v1-seR">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="18"/>
-                                                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="13"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="152" height="14"/>
+                                                                                    <fontDescription key="fontDescription" name="SeN-CM" family="SeoulNamsan CM" pointSize="14"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="timeLabel" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="JDQ-yO-ltk">
-                                                                                    <rect key="frame" x="160" y="0.0" width="110" height="18"/>
-                                                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="10"/>
+                                                                                    <rect key="frame" x="152" y="0.0" width="118" height="14"/>
+                                                                                    <fontDescription key="fontDescription" name="SeN-CL" family="SeoulNamsan CL" pointSize="12"/>
                                                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
@@ -499,8 +499,8 @@
                                                                             </constraints>
                                                                         </stackView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="commentLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="arD-Qy-9uV">
-                                                                            <rect key="frame" x="0.0" y="23" width="270" height="50"/>
-                                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                                                            <rect key="frame" x="0.0" y="19" width="270" height="54"/>
+                                                                            <fontDescription key="fontDescription" name="YiSunShinDotumM" family="YiSunShin Dotum M" pointSize="14"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
@@ -598,7 +598,7 @@
                                 <rect key="frame" x="5" y="627" width="315" height="30"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                                <fontDescription key="fontDescription" name="YiSunShinDotumM" family="YiSunShin Dotum M" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hcG-Qa-Q84">
@@ -607,7 +607,7 @@
                                     <constraint firstAttribute="width" constant="50" id="BOW-gZ-NfR"/>
                                     <constraint firstAttribute="height" constant="30" id="J0Q-Zc-uvw"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                <fontDescription key="fontDescription" name="SeN-CM" family="SeoulNamsan CM" pointSize="14"/>
                                 <state key="normal" title="보내기"/>
                                 <connections>
                                     <action selector="saveComment:" destination="jHn-3H-0sW" eventType="touchUpInside" id="bi8-OH-mak"/>
